--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jerry Jiao
 email: jerryjiao@berkeley.edu
 description: >-
-  My name is Jerry, and I am an EECS major at UC Berkeley. This is my personal website, where you can
+  My name is Jerry, and I'm an EECS major at UC Berkeley. This is my personal website, where you can
   learn more about my education, abilities, and interests. Welcome!
 
 url: jerry-jiao.github.io
